Bug 157137 - nvda#13167: LibreOffice: choose Printer, NVDA inappropriately reports all content in the container
Summary: nvda#13167: LibreOffice: choose Printer, NVDA inappropriately reports all con...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:24.2.0
Keywords: accessibility
Depends on:
Blocks: a11y-Windows
  Show dependency treegraph
 
Reported: 2023-09-07 12:23 UTC by Michael Weghorn
Modified: 2023-09-07 19:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2023-09-07 12:23:26 UTC
This issue was originally reported to the NVDA issue tracker:

Quoting the report from there:

> ### Issue Description:
> 
> The bug specifically occurs when users attempt to select a printer in the Print dialog of LibreOffice Calc. NVDA inappropriately reports all the content within the container, rather than only reporting the selected printer. This behavior can be confusing and overwhelming for users.
> ### Steps to reproduce:
> 
>     1. Open LibreOfficeDev Calc.
> 
>     2. Press Ctrl+P to open the Print dialog.
> 
>     3. Press the Tab key to navigate to the Printer option.
> 
> 
> NVDA reads out the content as follows:
> 
> Printer combo box - Microsoft Print to PDF. The list box shows the installed printers. Click the printer to use for the current print job. Click the Properties button to change some of the printer properties. Alt+i, 12 of 14 level 1.
> 
>     4. Press the Up Arrow key.
> 
> 
> #### Actual behavior:
> 
> Upon pressing the Up Arrow key, NVDA reads out additional content related to the Page Layout option pane:
> 
> speech:
> 
> Page Layout option pane
> 
> Paper size: combo box Set the paper size you would like to use. The preview will show how the document would look on a paper of the given size. 6 of 18
> 
> A4 210mm x 297mm 6 of 18 level 1
> #### Expected behavior:
> 
> The expected behavior is for NVDA to only report the selected printer when the "Up Arrow" key is pressed, without providing any additional information related to the Page Layout option pane.
> ### System configuration
> #### NVDA installed/portable/running from source:
> 
> Portable
> #### NVDA version:
> 
> 2023.2rc1
> #### Windows version:
> 
> Windows version 10.0.19042
> #### Name and version of other software in use when reproducing the issue:
> 
> LibreOffice version 7.6.0.3
> ### Other questions
> #### Does the issue still occur after restarting your computer?
> 
> Yes.
> #### Have you tried any other versions of NVDA? If so, please report their behaviors.
> 
> NVDA 2021.3
> #### If addons are disabled, is your problem still occuring?
> 
> Yes.
> #### Did you try to run the COM registry fixing tool in NVDA menu / tools?
> 
> No.
Comment 1 Michael Weghorn 2023-09-07 12:26:02 UTC
(In reply to Michael Weghorn from comment #0)
> This issue was originally reported to the NVDA issue tracker:

Forgot to paste the actual URL:
https://github.com/nvaccess/nvda/issues/13167


I can reproduce with current master and am working on a fix.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 19b8bac2aa59d02968c33ac6f83c66907d5ab94c
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_DE); UI: en-US
Calc: threaded
Comment 2 Michael Weghorn 2023-09-07 12:47:04 UTC
(In reply to Michael Weghorn from comment #1)
> I can reproduce with current master and am working on a fix.

-> https://gerrit.libreoffice.org/c/core/+/156666
Comment 3 Commit Notification 2023-09-07 19:03:23 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f6a6b1454c7c765c0fc2ef9dc3e6111509a88307

tdf#157137 a11y: Don't report active descendant when not focused

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.